[project]
name = "equipment-dispatch-rl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy"]

[project.optional-dependencies]
rl = ["gymnasium>=1.0", "stable-baselines3>=2.7", "sb3-contrib>=2.7", "torch"]
oracle = ["oracledb", "python-dotenv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
